apps/martin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: martin-ingress
  namespace: lonctus
spec:
  ingressClassName: traefik
  rules:
  - host: martin.lonctus.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: martin
            port:
              number: 80
